--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Predict A Country's Religion Based On The Flag
+<html>
+  <head>
+    <title>Predict A Country's Religion Based On The Flag</title>
+		<script src="swang2.github.io"></script>
+    <style>
+			/* tell the SVG path to be a thin blue line without any area fill */
+			path {
+				stroke: steelblue;
+				stroke-width: 1;
+				fill: none;
+			}
+			
+			.axis {
+			  shape-rendering: crispEdges;
+			}
+
+			.x.axis line {
+			  stroke: lightgrey;
+			}
+
+			.x.axis .minor {
+			  stroke-opacity: .5;
+			}
+
+			.x.axis path {
+			  display: none;
+			}
+
+			.y.axis line, .y.axis path {
+			  fill: none;
+			  stroke: #000;
+			}
+		</style>
+  </head>
+</html>
+
