--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Country's Flag And Its Religion.</h3>
 
-<p>Hello:
-![mainhue-religion](https://cloud.githubusercontent.com/assets/9040161/7950798/c6f21ea2-0954-11e5-91e4-97a31cc692f6.png)</p>
+<p>Hello:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
