--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-
+  <img src="https://cloud.githubusercontent.com/assets/9040161/7992260/01c7871a-0ab3-11e5-9202-7560a2380b49.png" alt="graphs.png"/>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
