--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ For example, Brazil’s flag is mainly green, which represents Brazil’s lush f
 <p>At first glance, it seems like red is the most used among these countries, and black and orange are the least used. Looking more carefully, we can see that orange would be most used in Hindu countries, blue by Christians, and green by Muslims and Hindus. As of now, it is hard to tell the religion of a country whose flag’s main hue is also commonly used by others, such as red. How can we tell what the official religion of a country is if its main hue on the flag is red? For this, we need to take a look at the combination of colors of each flag for each religion, and as before, see if there is a pattern. 
 </p>
 
-<img src="https://cloud.githubusercontent.com/assets/9040161/7992260/01c7871a-0ab3-11e5-9202-7560a2380b49.png alt="graphs.png"/>
+<img src="https://cloud.githubusercontent.com/assets/9040161/7992260/01c7871a-0ab3-11e5-9202-7560a2380b49.png" alt="graphs.png"/>
 
 <p>In this graph, we are displaying the probability of all colors in all flags grouped by religion. It’s a good thing that some obvious combinations appeared; if a flag’s main hue is red along with green and white, there is a high chance the flag belongs to an Islamic country. </p>
 
@@ -64,7 +64,7 @@ For example, Brazil’s flag is mainly green, which represents Brazil’s lush f
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Symbols</h3>
 
-<img src="https://cloud.githubusercontent.com/assets/9040161/7992258/01c49c94-0ab3-11e5-99ba-3d7352f3fb35.png alt="graphs.png"/>
+<img src="https://cloud.githubusercontent.com/assets/9040161/7992258/01c49c94-0ab3-11e5-99ba-3d7352f3fb35.png" alt="graphs.png"/>
 
 <p>When it comes to predicting a religion through symbols on the flag, the pattern becomes more straightforward. The probability that a flag contains a cross or a saltire and is Christian is less than 0.25, which sounds like it is a low chance. However, no other religion had a cross on their flag, except for only one Buddhist country.</p>
 
@@ -76,9 +76,20 @@ For example, Brazil’s flag is mainly green, which represents Brazil’s lush f
 <p>Long story short, we can more less tell the religion of a country by the colors of its flag, but we need to incorporate other features to make a more accurate prediction. 
 For example, in the beginning, we had the issue of how we could tell apart the color patterns between a Buddhist country and a Christian country , but with no doubt we can say that a country whose flag has a cross or a saltire is Christian. Therefore, if we see a flag with any combination of red, blue and white, we can think of whether it has a cross/saltire or not. Now we can better predict ifa country is Buddhist or Christian. The case is similar for the combination of colors between a Hindu flag and the rest , apparently if there are not many symbols on the flag, then it is probably Hindu.</p>
 
+<p>Christianity:</p>
+<img src="https://cloud.githubusercontent.com/assets/9040161/8002299/6774fd6c-0b22-11e5-867c-01d382fdc746.png" alt="graphs.png"/>
+
+<p>Buddhist:</p>
+<img src="https://cloud.githubusercontent.com/assets/9040161/8002694/c27a8922-0b25-11e5-93f8-34c73027806a.png" alt="graphs.png"/>
+
+<p>Islam:</p>
+<img src="https://cloud.githubusercontent.com/assets/9040161/8002568/cfe1989a-0b24-11e5-8d3d-63ed71d4617b.png" alt="graphs.png"/>
+
+<p>Hinduism:</p>
+<img src="https://cloud.githubusercontent.com/assets/9040161/8002770/4fddb06e-0b26-11e5-97e3-78005ed4227f.png" alt="graphs.png"/>
+      
       </section>
     </div>
-
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
